# Data-Structure-C-version-

./: .gitignore  BinarySearch.c  CMakeLists.txt  LinearList.c  LinkedStack.c  MaxSum.c  PrintN.c  README.md  Stack.c  main.c  polynomial.cpp
algorithm/: Line.c  LineLink.c  LinkedList.c  MaxSubseqSum.c  PrintN.c  polynomial.c
document/: 什么是数据结构？DS01.md
linearlist/: DoubleLinkList.c  LinearDyna.c  LinearList.c  LinkList.c  LinkListHead.c  LoopLinkList.c  PracticeLinkList.c
linked/: LinkList.c
queue/: SeqQueue.c
sort/: InsertSort.c  SwapSort.c
stack/: LinkStack.c  SeqStack.c
test/: Test.c  TestOne.c
